# opentelemetry-apm

./: .gitignore  docker-compose.yaml  k6-script.js  readme.md  request-script.sh
.github/workflows/: build.yaml
app_express/: Dockerfile  app.js  package-lock.json  package.json
app_fastapi/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app_springboot/: Dockerfile  docker-compose.yaml  pom.xml
app_springboot/src/main/java/com/example/app/: AppApplication.java
etc/: dashboards.yaml  otel-collector-config.yaml
etc/dashboards/: OpenTelemetry APM.json  OpenTelemetry-APM.json
etc/grafana/: datasource.yml
fastapi_app/: Dockerfile  main.py  requirements.txt
images/: apm-arch.drawio  otel-collector-pipeline.drawio
